Remove JCasC custom config

--- a/charts/jenkins/values.yaml
+++ b/charts/jenkins/values.yaml
@@ -7,235 +7,15 @@ auditlog:
 
 
 jenkins:
+
+  cloudName: MyCloud
+  kubernetesURL: https://kubernetes.docker.internal
+  jenkinsUrl: http://jenkins.jenkins.svc:8080
+
   renderHelmLabels: true
   controller:
     JCasC:
-      defaultConfig: false
-      configScripts:
-        all: |
-          jenkins:
-            agentProtocols:
-              - "JNLP4-connect"
-              - "Ping"
-            authorizationStrategy:
-              loggedInUsersCanDoAnything:
-                allowAnonymousRead: false
-            clouds:
-              - kubernetes:
-                  containerCap: 10
-                  containerCapStr: "10"
-                  jenkinsUrl: "http://jenkins.jenkins.svc:8080"
-                  name: "cloud"
-                  namespace: "jenkins"
-                  serverUrl: "https://dh-master-1p:8443"
-                  skipTlsVerify: true
-                  webSocket: true
-              - kubernetes:
-                  containerCap: 10
-                  containerCapStr: "10"
-                  jenkinsTunnel: "jenkins-agent.jenkins.svc.cluster.local:50000"
-                  jenkinsUrl: "http://jenkins.jenkins.svc.cluster.local:8080"
-                  name: "kubernetes"
-                  namespace: "jenkins"
-                  podLabels:
-                    - key: "jenkins/jenkins-jenkins-agent"
-                      value: "true"
-                  serverUrl: "https://kubernetes.default"
-                  templates:
-                    - containers:
-                        - args: "^${computer.jnlpmac} ^${computer.name}"
-                          envVars:
-                            - envVar:
-                                key: "JENKINS_URL"
-                                value: "http://jenkins.jenkins.svc.cluster.local:8080/"
-                          image: "jenkins/inbound-agent:3107.v665000b_51092-15"
-                          name: "jnlp"
-                          resourceLimitCpu: "512m"
-                          resourceLimitMemory: "512Mi"
-                          resourceRequestCpu: "512m"
-                          resourceRequestMemory: "512Mi"
-                          workingDir: "/home/jenkins/agent"
-                      id: "f63f51f5597a472a0219f86d684dbb0c34dcf80c9ef24fd3efec4e4a8bd21bc6"
-                      label: "jenkins-jenkins-agent"
-                      name: "default"
-                      namespace: "jenkins"
-                      nodeUsageMode: "NORMAL"
-                      podRetention: "never"
-                      serviceAccount: "default"
-                      slaveConnectTimeout: 100
-                      slaveConnectTimeoutStr: "100"
-                      yamlMergeStrategy: "override"
-            crumbIssuer:
-              standard:
-                excludeClientIPFromCrumb: true
-            disableRememberMe: false
-            labelAtoms:
-              - name: "built-in"
-              - name: "jenkins-jenkins-agent"
-            markupFormatter: "plainText"
-            mode: NORMAL
-            myViewsTabBar: "standard"
-            numExecutors: 0
-            primaryView:
-              all:
-                name: "all"
-            projectNamingStrategy: "standard"
-            quietPeriod: 5
-            remotingSecurity:
-              enabled: true
-            scmCheckoutRetryCount: 0
-            securityRealm:
-              local:
-                allowsSignup: false
-                enableCaptcha: false
-                users:
-                  - id: "admin"
-                    name: "Jenkins Admin"
-                    properties:
-                      - "apiToken"
-                      - "mailer"
-                      - "myView"
-                      - preferredProvider:
-                          providerId: "default"
-                      - "theme"
-                      - "timezone"
-                      - "experimentalFlags"
-            slaveAgentPort: 50000
-            updateCenter:
-              sites:
-                - id: "default"
-                  url: "https://updates.jenkins.io/update-center.json"
-            views:
-              - all:
-                  name: "all"
-            viewsTabBar: "standard"
-          globalCredentialsConfiguration:
-            configuration:
-              providerFilter: "none"
-              typeFilter: "none"
-          security:
-            apiToken:
-              creationOfLegacyTokenEnabled: false
-              tokenGenerationOnCreationEnabled: false
-              usageStatisticsEnabled: true
-            envInject:
-              enableLoadingFromMaster: false
-              enablePermissions: false
-              hideInjectedVars: false
-            gitHooks:
-              allowedOnAgents: false
-              allowedOnController: false
-            gitHostKeyVerificationConfiguration:
-              sshHostKeyVerificationStrategy: "knownHostsFileVerificationStrategy"
-            globalJobDslSecurityConfiguration:
-              useScriptSecurity: true
-            kerberosSso:
-              accountName: "Service account"
-              allowBasic: true
-              allowDelegation: false
-              allowLocalhost: true
-              allowUnsecureBasic: true
-              anonymousAccess: false
-              enabled: false
-              krb5Location: "/etc/krb5.conf"
-              loginClientModule: "spnego-client"
-              loginLocation: "/etc/login.conf"
-              loginServerModule: "spnego-server"
-              promptNtlm: false
-              redirectEnabled: false
-            sSHD:
-              port: -1
-          unclassified:
-            audit-trail:
-              logBuildCause: true
-              logCredentialsUsage: true
-              pattern: ".*/(?:configSubmit|doDelete|postBuildResult|enable|disable|cancelQueue|stop|toggleLogKeep|doWipeOutWorkspace|createItem|createView|toggleOffline|cancelQuietDown|quietDown|restart|exit|safeExit)/?.*"
-            buildDiscarders:
-              configuredBuildDiscarders:
-                - "jobBuildDiscarder"
-            buildUserVars:
-              allBuilds: false
-            email-ext:
-              adminRequiredForTemplateTesting: false
-              allowUnregisteredEnabled: false
-              charset: "UTF-8"
-              debugMode: false
-              defaultBody: |-
-                $PROJECT_NAME - Build # $BUILD_NUMBER - $BUILD_STATUS:
-          
-                Check console output at $BUILD_URL to view the results.
-              defaultSubject: "$PROJECT_NAME - Build # $BUILD_NUMBER - $BUILD_STATUS!"
-              defaultTriggerIds:
-                - "hudson.plugins.emailext.plugins.trigger.FailureTrigger"
-              maxAttachmentSize: -1
-              maxAttachmentSizeMb: -1
-              precedenceBulk: false
-              watchingEnabled: false
-            fingerprints:
-              fingerprintCleanupDisabled: false
-              storage: "file"
-            gitHubConfiguration:
-              apiRateLimitChecker: ThrottleForNormalize
-            gitHubPluginConfig:
-              hookUrl: "http://kubernetes.docker.internal/github-webhook/"
-            junitTestResultStorage:
-              storage: "file"
-            location:
-              adminAddress: "address not configured yet <nobody@nowhere>"
-              url: "http://kubernetes.docker.internal/"
-            mailer:
-              charset: "UTF-8"
-              useSsl: false
-              useTls: false
-            pollSCM:
-              pollingThreadCount: 10
-            prometheusConfiguration:
-              appendParamLabel: false
-              appendStatusLabel: false
-              collectDiskUsage: true
-              collectNodeStatus: true
-              collectingMetricsPeriodInSeconds: 120
-              countAbortedBuilds: true
-              countFailedBuilds: true
-              countNotBuiltBuilds: true
-              countSuccessfulBuilds: true
-              countUnstableBuilds: true
-              defaultNamespace: "default"
-              fetchTestResults: true
-              jobAttributeName: "jenkins_job"
-              path: "prometheus"
-              perBuildMetrics: false
-              processingDisabledBuilds: false
-              useAuthenticatedEndpoint: false
-            scmGit:
-              addGitTagAction: false
-              allowSecondFetch: false
-              createAccountBasedOnEmail: false
-              disableGitToolChooser: false
-              hideCredentials: false
-              showEntireCommitSummaryInChanges: false
-              useExistingAccountWithSameEmail: false
-            separator:
-              globalSectionHeaderStyle: "font-weight: bold;"
-            subversionSCM:
-              workspaceFormat: 8
-            themeManager:
-              disableUserThemes: false
-            timestamper:
-              allPipelines: false
-              elapsedTimeFormat: "'<b>'HH:mm:ss.S'</b> '"
-              systemTimeFormat: "'<b>'HH:mm:ss'</b> '"
-            whitelist:
-              enabled: false
-          tool:
-            git:
-              installations:
-                - home: "git"
-                  name: "Default"
-            mavenGlobalConfig:
-              globalSettingsProvider: "standard"
-              settingsProvider: "standard"
-          
+      defaultConfig: true
 
     componentName: "jenkins-controller"
     image: jenkins/jenkins
