Update ingress rules

--- a/platform/templates/argocd-ingress.yaml
+++ b/platform/templates/argocd-ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: argocd
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   ingressClassName: nginx
   rules:
