Update ingress rules

--- a/platform/templates/argocd-ingress.yaml
+++ b/platform/templates/argocd-ingress.yaml
@@ -7,12 +7,14 @@ metadata:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - jenkins.alex.localhost
   rules:
     - host: argocd.alex.localhost
       http:
         paths:
-          - path: /
-            pathType: Prefix
+          - pathType: Prefix
             backend:
               service:
                 name: argocd-server
