--- a/platform/templates/argocd-ingress.yaml
+++ b/platform/templates/argocd-ingress.yaml
@@ -2,22 +2,19 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: argocd
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+  namespace: argocd
 spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - jenkins.alex.localhost
+        - argocd.alex.localhost
   rules:
     - host: argocd.alex.localhost
       http:
         paths:
-          - pathType: Prefix
+          - pathType: ImplementationSpecific
             backend:
               service:
                 name: argocd-server
                 port:
                   number: 80
-                
