Update ingress rules

--- a/charts/jenkins/values.yaml
+++ b/charts/jenkins/values.yaml
@@ -113,7 +113,7 @@ jenkins:
     ingress:
       enabled: true
       ingressClassName: nginx
-      hostName: argocd.alex.localhost
+      hostName: jenkins.alex.localhost
 
   persistence:
     enabled: true
