Update ingress rules argo

--- a/platform/templates/argocd-ingress.yaml
+++ b/platform/templates/argocd-ingress.yaml
@@ -3,6 +3,9 @@ kind: Ingress
 metadata:
   name: argocd
   namespace: argocd
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   ingressClassName: nginx
   tls:
