--- a/charts/jenkins/Chart.yaml
+++ b/charts/jenkins/Chart.yaml
@@ -6,6 +6,10 @@ type: application
 version: 0.1.0
 appVersion: "1.16.0"
 
+maintainers:
+  - name: Alex Egorov
+    email: a.egorov@ktsstudio.ru
+
 dependencies:
   - name: jenkins
     version: 4.4.1
