--- a/platform/templates/airflow.yaml
+++ b/platform/templates/airflow.yaml
@@ -1,3 +1,4 @@
+{{/*TODO: сделать один файлик по рейнджу*/}}
 {{- if .Values.airflow.enable -}}
 {{- with .Values.airflow -}}
 apiVersion: {{ $.Values.global.argo.apiVersion }}
