Update test jenkins

--- a/charts/jenkins/test.yaml
+++ b/charts/jenkins/test.yaml
@@ -50,61 +50,61 @@ jenkins:
       - name: COLLECT_DISK_USAGE
         value: "true"
 
-    installPlugins:
-      - active-directory:2.30
-      - audit-trail:333.vb_e1b_b_0f1238c
-      - authentication-tokens:1.53.v1c90fd9191a_b_
-      - bouncycastle-api:2.28
-      - branch-api:2.1105.v472604208c55
-      - branch-api:2.1122.v09cb_8ea_8a_724
-      - build-user-vars-plugin
-      - checks-api:2.0.0
-      - cloudbees-disk-usage-simple:182.v62ca_0c992a_f3
-      - command-launcher:100.v2f6722292ee8
-      - config-file-provider:938.ve2b_8a_591c596
-      - configuration-as-code-groovy:1.1
-      - configuration-as-code:1647.ve39ca_b_829b_42
-      - credentials-binding:604.vb_64480b_c56ca_
-      - credentials:1271.v54b_1c2c6388a_
-      - docker-commons:419.v8e3cd84ef49c
-      - echarts-api:5.4.0-5
-      - email-ext:2.97
-      - envinject:2.901.v0038b_6471582
-      - generic-webhook-trigger:1.86.3
-      - git-client:4.3.0
-      - git-parameter:0.9.18
-      - git-server:99.va_0826a_b_cdfa_d
-      - git:5.0.2
-      - github-api:1.314-431.v78d72a_3fe4c3
-      - github-branch-source:1728.v859147241f49
-      - github:1.37.1
-      - hidden-parameter:138.v2a_c30d04e566
-      - instance-identity:142.v04572ca_5b_265
-      - jackson2-api:2.15.1-344.v6eb_55303dc3e
-      - javax-mail-api:1.6.2-9
-      - job-dsl
-      - jsch:0.2.8-65.v052c39de79b_2
-      - junit:1207.va_09d5100410f
-      - kafkalogs:0.1.8
-      - kerberos-sso:1.11
-      - kubernetes-client-api:6.4.1-215.v2ed17097a_8e9
-      - kubernetes-credentials:0.10.0
-      - kubernetes:3937.vd7b_82db_e347b_
-      - lockable-resources:1156.v5e9f897ece02
-      - matrix-auth:3.1.10
-      - matrix-project:789.v57a_725b_63c79
-      - metrics:4.2.18-438.v0ede325a_4c68
-      - parameter-separator
-      - pipeline-model-extensions
-      - plain-credentials:143.v1b_df8b_d3b_e48
-      - prometheus:2.2.3
-      - scm-api:672.v64378a_b_20c60
-      - script-security:1251.vfe552ed55f8d
-      - subversion:2.17.2
-      - theme-manager:193.vcef22f6c5f2b_
-      - timestamper:1.25
-      - token-macro:359.vb_cde11682e0c
-      - uno-choice:2.6.5
+#    installPlugins:
+#      - active-directory:2.30
+#      - audit-trail:333.vb_e1b_b_0f1238c
+#      - authentication-tokens:1.53.v1c90fd9191a_b_
+#      - bouncycastle-api:2.28
+#      - branch-api:2.1105.v472604208c55
+#      - branch-api:2.1122.v09cb_8ea_8a_724
+#      - build-user-vars-plugin
+#      - checks-api:2.0.0
+#      - cloudbees-disk-usage-simple:182.v62ca_0c992a_f3
+#      - command-launcher:100.v2f6722292ee8
+#      - config-file-provider:938.ve2b_8a_591c596
+#      - configuration-as-code-groovy:1.1
+#      - configuration-as-code:1647.ve39ca_b_829b_42
+#      - credentials-binding:604.vb_64480b_c56ca_
+#      - credentials:1271.v54b_1c2c6388a_
+#      - docker-commons:419.v8e3cd84ef49c
+#      - echarts-api:5.4.0-5
+#      - email-ext:2.97
+#      - envinject:2.901.v0038b_6471582
+#      - generic-webhook-trigger:1.86.3
+#      - git-client:4.3.0
+#      - git-parameter:0.9.18
+#      - git-server:99.va_0826a_b_cdfa_d
+#      - git:5.0.2
+#      - github-api:1.314-431.v78d72a_3fe4c3
+#      - github-branch-source:1728.v859147241f49
+#      - github:1.37.1
+#      - hidden-parameter:138.v2a_c30d04e566
+#      - instance-identity:142.v04572ca_5b_265
+#      - jackson2-api:2.15.1-344.v6eb_55303dc3e
+#      - javax-mail-api:1.6.2-9
+#      - job-dsl
+#      - jsch:0.2.8-65.v052c39de79b_2
+#      - junit:1207.va_09d5100410f
+#      - kafkalogs:0.1.8
+#      - kerberos-sso:1.11
+#      - kubernetes-client-api:6.4.1-215.v2ed17097a_8e9
+#      - kubernetes-credentials:0.10.0
+#      - kubernetes:3937.vd7b_82db_e347b_
+#      - lockable-resources:1156.v5e9f897ece02
+#      - matrix-auth:3.1.10
+#      - matrix-project:789.v57a_725b_63c79
+#      - metrics:4.2.18-438.v0ede325a_4c68
+#      - parameter-separator
+#      - pipeline-model-extensions
+#      - plain-credentials:143.v1b_df8b_d3b_e48
+#      - prometheus:2.2.3
+#      - scm-api:672.v64378a_b_20c60
+#      - script-security:1251.vfe552ed55f8d
+#      - subversion:2.17.2
+#      - theme-manager:193.vcef22f6c5f2b_
+#      - timestamper:1.25
+#      - token-macro:359.vb_cde11682e0c
+#      - uno-choice:2.6.5
 
     jenkinsHome: "/var/jenkins_home"
     jenkinsRef: "/usr/share/jenkins/ref"
